force-app/main/default/objects/Payment_Plan__c/fields/EYI_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_Active__c</fullName>
    <formula>IF(
    ISPICKVAL( EYI_Plan_Type__c , &quot;Construction Linked Payment&quot;) || ISPICKVAL( EYI_Plan_Type__c , &quot;CLP + Time bound&quot;),
    TRUE,
    IF(
        AND(
            TODAY() &gt;= EYI_Start_Date__c,
            TODAY() &lt;= EYI_End_Date__c
        ),
        TRUE,
        FALSE
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>