force-app/main/default/objects/Payment_Plan__c/fields/EYI_Is_Extended__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_Extended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Extended</label>
    <type>Checkbox</type>
</CustomField>