force-app/main/default/objects/Payment_Plan__c/fields/EYI_NPV_Percent__c.field-meta.xml
<CustomField>
    <fullName>EYI_NPV_Percent__c</fullName>
    <formula>(EYI_Total_NPV__c  /  EYI_Quote__r.EYI_Quoatation_Grand_Total__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPV %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>