force-app/main/default/objects/Payment_Plan__c/fields/EYI_NPV_PSF__c.field-meta.xml
<CustomField>
    <fullName>EYI_NPV_PSF__c</fullName>
    <formula>EYI_Total_NPV__c  /  EYI_Quote__r.EYI_Inventory__r.EYI_Saleable_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPV (PSF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>