force-app/main/default/objects/Payment_Plan__c/fields/EYI_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Plan_Type__c</fullName>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction Linked Payment</fullName>
            </value>
            <value>
                <fullName>CLP + Time bound</fullName>
            </value>
            <value>
                <fullName>Time bound</fullName>
            </value>
            <value>
                <fullName>Subvention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>