force-app/main/default/objects/Payment_Plan__c/fields/EYI_Quote__c.field-meta.xml
<CustomField>
    <fullName>EYI_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Payment Plans</relationshipLabel>
    <relationshipName>Payment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>