force-app/main/default/objects/Payment_Plan__c/fields/EYI_SAP_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>SAP ExternalId</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>