force-app/main/default/objects/Payment_Plan__c/fields/EYI_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>