force-app/main/default/objects/Payment_Plan__c/fields/EYI_Total_NPV__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_NPV__c</fullName>
    <label>Total NPV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>