force-app/main/default/objects/Payment_Plan__c/fields/EYI_Total_TDS__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_TDS__c</fullName>
    <label>Total TDS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>