force-app/main/default/objects/Payment_Plan__c/fields/Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Plan_Code__c</fullName>
    <label>Plan Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>