force-app/main/default/objects/Payment_Plan__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>EYI_Tower__c.EYI_Project_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EYI_Tower__c</referenceTo>
    <relationshipLabel>Payment Plans</relationshipLabel>
    <relationshipName>Payment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>