force-app/main/default/objects/Payment_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>Golden</value>
    </filters>
    <label>All</label>
</ListView>