force-app/main/default/objects/Payment_Plan__c/listViews/All_Standard_Plans.listView-meta.xml
<ListView>
    <fullName>All_Standard_Plans</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Tower__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EYI_Is_Extended__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Standard Plans</label>
</ListView>